[tool.poetry]
name = "scrapbox-chatgpt-connector"
version = "0.1.0"
description = ""
authors = ["kimiyuki shirai <kimiyuki@gmail.com>"]
readme = "README.md"
packages = [{include = "scrapbox_chatgpt_connector"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
tqdm = "^4.65.0"
tiktoken = "^0.3.3"
numpy = "^1.24.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"